--- a/AestheticaServicesPage.html
+++ b/AestheticaServicesPage.html
@@ -33,8 +33,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ml-auto mr-5">
-                <a class="nav-item nav-link active" style="float: right;" href="index.html"><b style="color: white;font-family:'Montserrat';">Home</b><span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" style="float: right;" href="index.html"><b style="color: white;font-family:'Montserrat';">About us</b></a>
+                <a class="nav-item nav-link active" style="float: right;" href="https://azmainm.github.io/Aesthetica/"><b style="color: white;font-family:'Montserrat';">Home</b><span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" style="float: right;" href="https://azmainm.github.io/Aesthetica/"><b style="color: white;font-family:'Montserrat';">About us</b></a>
                 <a class="nav-item nav-link" style="float: right;" href="AestheticaWorkPage.html"><b style="color: white;font-family:'Montserrat';">Projects</b></a>
                 <a class="nav-item nav-link"style="float: right;" href="#contact"><b style="color: white;font-family:'Montserrat';">Contact</b></a>
             </div>
